<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">footballDB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_ranking">CurrentRanking</string>
    <string name="rankingTitle">Ranking Page</string>
    <string name="btnStrRanking">Ranking</string>
    <string name="firstPage">Opening Page</string>
    <string name="serverUrl">https://www.dein-weg-in-die-cloud.de/tomcat7</string>
    <string name="ranking">Ranking</string>
    <string name="result">Result</string>
    <string name="resultPage">Result Page</string>
    <string name="title_activity_activity_result">ActivityResult</string>
    <string name="resultURL">https://www.dein-weg-in-die-cloud.de/tomcat7/RestSoccer/fussball/spieltag/23</string>
    <string name="title_activity_result_detail">ResultDetailActivity</string>
    <string name="ResultActPreviousBtn">Previous</string>
    <string name="ResultActNextBtn">Next</string>

</resources>
