<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.footballdb.ActivityResult$PlaceholderFragment" >

     <ListView
         android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/rankingTitle" >
	</ListView>

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@android:id/list"
         android:orientation="vertical"
         android:layout_marginLeft="44dp" >
        
        <Button
        	android:id="@+id/ResultActPreviousBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ResultActPreviousBtn" />
         
        <Button
	        android:id="@+id/ResultActNextBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ResultActNextBtn" />
        
     </LinearLayout>

</RelativeLayout>
